# cipcli

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
caniphish/: __main__.py
cipcli/: __main__.py
tests/: conftest.py
